fix: mobile overflow issue solved

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
 
 
   html {
-    @apply scroll-smooth transition-all duration-300;
+    @apply scroll-smooth transition-all duration-300 overflow-x-clip;
     scroll-behavior: smooth;
     scrollbar-width: none;
   }
